<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:layout_margin="8dp"
        >

        <TextView
            style="@style/calcInfo"
            android:id="@+id/previous_calculation"
            android:layout_width="wrap_content"
            android:text="@string/previousCalculationText"

            app:layout_constraintBottom_toBottomOf="@id/current_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            style="@style/calcInfo"
            android:id="@+id/current_number"
            android:text="@string/currentNumberText"
            android:textSize="64sp"
            android:paddingVertical="8dp"

            app:layout_constraintBaseline_toTopOf="@id/current_calculation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/calcInfo"
            android:id="@+id/current_calculation"
            android:text="@string/currentCalculationText"

            app:layout_constraintTop_toBottomOf="@+id/current_number"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/numbers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        >

        <ImageButton
            android:id="@+id/button_backspace"
            style="@style/land_buttonNorm"
            android:layout_width="72dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/backspace_button_styling"
            android:contentDescription="@string/backspaceButtonText"
            android:src="@drawable/ic_baseline_backspace_24"

            app:layout_constraintBottom_toTopOf="@id/button_divide"
            app:layout_constraintEnd_toEndOf="@id/button_divide"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button_clear"
            style="@style/port_buttonFunc"
            android:text="@string/clearText"


            app:layout_constraintBottom_toTopOf="@id/button_7"
            app:layout_constraintEnd_toStartOf="@id/button_bracket"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_backspace" />

        <Button
            android:id="@+id/button_bracket"
            style="@style/port_buttonNorm"
            android:text="@string/parenthesesText"

            app:layout_constraintBottom_toTopOf="@id/button_8"
            app:layout_constraintEnd_toStartOf="@id/button_percent"
            app:layout_constraintStart_toEndOf="@id/button_clear"
            app:layout_constraintTop_toBottomOf="@+id/button_backspace" />

        <Button
            android:id="@+id/button_percent"
            style="@style/port_buttonNorm"
            android:text="@string/percentText"

            app:layout_constraintBottom_toTopOf="@id/button_9"
            app:layout_constraintEnd_toStartOf="@id/button_divide"
            app:layout_constraintStart_toEndOf="@id/button_bracket"
            app:layout_constraintTop_toBottomOf="@id/button_backspace" />
        <Button
            android:id="@+id/button_divide"
            style="@style/port_buttonOp"
            android:text="@string/divideText"


            app:layout_constraintTop_toBottomOf="@id/button_backspace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_percent"
            app:layout_constraintBottom_toTopOf="@id/button_multiply"
            />
        <Button
            android:id="@+id/button_7"
            style="@style/port_buttonNorm"
            android:text="@string/sevenText"

            app:layout_constraintEnd_toStartOf="@id/button_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_clear"
            app:layout_constraintBottom_toTopOf="@id/button_4"

            />
        <Button
            android:id="@+id/button_8"
            style="@style/port_buttonNorm"
            android:text="@string/eightText"

            app:layout_constraintTop_toBottomOf="@id/button_bracket"

            app:layout_constraintEnd_toStartOf="@id/button_9"
            app:layout_constraintStart_toEndOf="@id/button_7"
            app:layout_constraintBottom_toTopOf="@id/button_5"
            />
        <Button
            android:id="@+id/button_9"
            style="@style/port_buttonNorm"
            android:text="@string/nineText"


            app:layout_constraintEnd_toStartOf="@id/button_multiply"
            app:layout_constraintStart_toEndOf="@id/button_8"
            app:layout_constraintTop_toBottomOf="@id/button_percent"
            app:layout_constraintBottom_toTopOf="@id/button_6"
            />
        <Button
            android:id="@+id/button_multiply"
            style="@style/port_buttonOp"
            android:text="@string/multiplyText"

            app:layout_constraintTop_toBottomOf="@id/button_divide"
            app:layout_constraintBottom_toTopOf="@id/button_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_9"
            />
        <Button
            android:id="@+id/button_4"
            style="@style/port_buttonNorm"
            android:text="@string/fourText"

            app:layout_constraintTop_toBottomOf="@id/button_7"
            app:layout_constraintBottom_toTopOf="@id/button_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_5"
            />

        <Button
            android:id="@+id/button_5"
            style="@style/port_buttonNorm"
            android:text="@string/fiveText"

            app:layout_constraintTop_toBottomOf="@id/button_8"
            app:layout_constraintBottom_toTopOf="@id/button_2"
            app:layout_constraintEnd_toStartOf="@id/button_6"
            app:layout_constraintStart_toEndOf="@id/button_4"
            />

        <Button
            android:id="@+id/button_6"
            style="@style/port_buttonNorm"
            android:text="@string/sixText"

            app:layout_constraintTop_toBottomOf="@id/button_9"
            app:layout_constraintBottom_toTopOf="@id/button_3"
            app:layout_constraintEnd_toStartOf="@id/button_minus"
            app:layout_constraintStart_toEndOf="@id/button_5"
            />

        <Button
            android:id="@+id/button_minus"
            style="@style/port_buttonOp"
            android:text="@string/subtractText"

            app:layout_constraintTop_toBottomOf="@id/button_multiply"
            app:layout_constraintBottom_toTopOf="@id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_6"
            />

        <Button
            android:id="@+id/button_1"
            style="@style/port_buttonNorm"
            android:text="@string/oneText"

            app:layout_constraintTop_toBottomOf="@id/button_4"
            app:layout_constraintBottom_toTopOf="@id/button_sign"
            app:layout_constraintEnd_toStartOf="@id/button_2"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/button_2"
            style="@style/port_buttonNorm"
            android:text="@string/twoText"

            app:layout_constraintTop_toBottomOf="@id/button_5"
            app:layout_constraintBottom_toTopOf="@id/button_0"
            app:layout_constraintEnd_toStartOf="@id/button_3"
            app:layout_constraintStart_toEndOf="@id/button_1"
            />

        <Button
            android:id="@+id/button_3"
            style="@style/port_buttonNorm"
            android:text="@string/threeText"

            app:layout_constraintTop_toBottomOf="@id/button_6"
            app:layout_constraintBottom_toTopOf="@id/button_decimal"
            app:layout_constraintEnd_toStartOf="@id/button_add"
            app:layout_constraintStart_toEndOf="@id/button_2"
            />

        <Button
            android:id="@+id/button_add"
            style="@style/port_buttonOp"
            android:text="@string/additionText"

            app:layout_constraintTop_toBottomOf="@id/button_minus"
            app:layout_constraintBottom_toTopOf="@id/button_equals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_3"
            />

        <Button
            android:id="@+id/button_sign"
            style="@style/port_buttonNorm"
            android:text="@string/signText"

            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_0"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/button_0"
            style="@style/port_buttonNorm"
            android:text="@string/zeroText"

            app:layout_constraintTop_toBottomOf="@id/button_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_decimal"
            app:layout_constraintStart_toEndOf="@id/button_sign"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button_decimal"
            style="@style/port_buttonNorm"
            android:text="@string/decimalText"

            app:layout_constraintTop_toBottomOf="@id/button_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_equals"
            app:layout_constraintStart_toEndOf="@id/button_0"
            />

        <Button
            android:id="@+id/button_equals"
            style="@style/port_buttonFunc"
            android:text="@string/equalsText"

            app:layout_constraintTop_toBottomOf="@id/button_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_decimal"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>